--- a/contact_me.html
+++ b/contact_me.html
@@ -11,7 +11,7 @@
     <p>9369986020</p>
     <p>alankritapatel61@gmal.com</p>
     <hr>
-    <form  action="mailto:info@londonappbrewery.com" method="post " enctype="text/plain">
+    <form  action="mailto:alankritapatel61@gmail.com" method="post " enctype="text/plain">
     <label>Your name:</label>
     <input type="text" name="your name" value=""><br>
      <label >Your Email:</label>
