--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
             Reading qoutes
         </li>
         <li>
-            Google
+            Motivating People
         </li>
     </ol>
     
